--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,7 @@
     ],
     "minimum-stability": "stable",
     "require": {
-        "php": ">=5.4.0",
-        "yiisoft/yii2": "~2.0.6"
+        "php": ">=5.4.0"
     },
     "autoload": {
         "psr-4": {
